# interaction_ms/Models/Match.cs
@@ -1,0 +1,4 @@
+public class Match
+ {
+    public bool State { get; set; }
+ }
